Added form validation

--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -36,8 +36,12 @@
   background-color: #92320c;
 }
 
-.bump {
+/*.bump {
   animation: bump 300ms ease-out;
+}*/
+
+.bump {
+  animation: bump 500ms linear;
 }
 
 @keyframes bump {
